# OpenCVFITS

./: CMakeLists.txt  OpenCV2FITS.hpp  OpenCVFITS.hpp  README.md
examples/: example.cpp
